--- a/data/static/css/jumpserver.css
+++ b/data/static/css/jumpserver.css
@@ -34,8 +34,8 @@ th a {
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-    background-color: #1ab394 !important;
-    /*color: #333 !important;*/
+    background-color: #d2d2d2 !important;
+    color: #333 !important;
 }
 
 .select2-selection--single,
@@ -131,18 +131,10 @@ table.dataTable tbody td.selected td i.text-navy {
     margin-right: 5px !important;
 }
 
-.m-m-m{
-    margin-left: 50px !important;
-}
-
 .m-10 {
     margin: 10px !important;
 }
-.f-i-l-e{
-    /*float: left;*/
-    margin-left: 1000px !important;
-    /*padding-left: 1000px !important;*/
-}
+
 .m-t-10 {
     margin-top: 10px !important;
 }
@@ -343,13 +335,13 @@ div.dataTables_wrapper div.dataTables_filter {
 
 .nav-header, body.mini-navbar .nav-header {
     padding: 0;
-    /*background: #202c37;*/
+    background: #202c37;
 }
 
 .profile-element div:first-child {
     line-height: 60px;
     /*width: 70px;*/
-    /*float: left;*/
+    float: left;
     text-align: center;
 }
 
@@ -446,7 +438,4 @@ div.dataTables_wrapper div.dataTables_filter {
     white-space: nowrap;
 }
 
-.form-group .required .control-label:after {
-    content:"*";
-    color:red;
-}
+
