--- a/apps/users/templates/users/user_password_update.html
+++ b/apps/users/templates/users/user_password_update.html
@@ -39,10 +39,10 @@
                                 <a href="{% url 'users:user-profile-update' %}" class="text-center">{% trans 'Profile' %} </a>
                             </li>
                             <li class="active">
-                                <a href="{% url 'users:user-password-update' %}" class="text-center">{% trans 'Password' %} </a>
+                                <a href="{% url 'users:user-profile-password-update' %}" class="text-center">{% trans 'Password' %} </a>
                             </li>
                             <li>
-                                <a href="{% url 'users:user-pubkey-update' %}" class="text-center">{% trans 'Public key' %} </a>
+                                <a href="{% url 'users:user-profile-pubkey-update' %}" class="text-center">{% trans 'Public key' %} </a>
                             </li>
                         </ul>
                     </div>
