--- a/apps/templates/_nav.html
+++ b/apps/templates/_nav.html
@@ -35,38 +35,38 @@
         </li>
     </ul>
 </li>
-<li id="terminal">
-    <a>
-        <i class="fa fa-rocket" style="width: 14px"></i> <span class="nav-label">{% trans 'Sessions' %}</span><span class="fa arrow"></span>
-    </a>
-    <ul class="nav nav-second-level">
-        <li id="session-online"><a href="{% url 'terminal:session-online-list' %}">{% trans 'Session online' %}</a></li>
-        <li id="session-offline"><a href="{% url 'terminal:session-offline-list' %}">{% trans 'Session offline' %}</a></li>
-        <li id="command"><a href="{% url 'terminal:command-list' %}">{% trans 'Commands' %}</a></li>
-        <li>
-            <a href="{% url 'terminal:web-terminal' %}" target="_blank">
-            <span class="nav-label">{% trans 'Web terminal' %}</span>
-            </a>
-        </li>
-        <li id="terminal"><a href="{% url 'terminal:terminal-list' %}">{% trans 'Terminal' %}</a></li>
-    </ul>
-</li>
-<li id="ops">
-    <a>
-        <i class="fa fa-coffee" style="width: 14px"></i> <span class="nav-label">{% trans 'Job Center' %}</span><span class="fa arrow"></span>
-    </a>
-    <ul class="nav nav-second-level">
-        <li id="task"><a href="{% url 'ops:task-list' %}">{% trans 'Task list' %}</a></li>
-    </ul>
-</li>
-<li id="audits">
-    <a>
-        <i class="fa fa-history" style="width: 14px"></i> <span class="nav-label">{% trans 'Audits' %}</span><span class="fa arrow"></span>
-    </a>
-    <ul class="nav nav-second-level">
-        <li id="ftp-log"><a href="{% url 'audits:ftp-log-list' %}">{% trans 'FTP log' %}</a></li>
-    </ul>
-</li>
+{#<li id="terminal">#}
+{#    <a>#}
+{#        <i class="fa fa-rocket" style="width: 14px"></i> <span class="nav-label">{% trans 'Sessions' %}</span><span class="fa arrow"></span>#}
+{#    </a>#}
+{#    <ul class="nav nav-second-level">#}
+{#        <li id="session-online"><a href="{% url 'terminal:session-online-list' %}">{% trans 'Session online' %}</a></li>#}
+{#        <li id="session-offline"><a href="{% url 'terminal:session-offline-list' %}">{% trans 'Session offline' %}</a></li>#}
+{#        <li id="command"><a href="{% url 'terminal:command-list' %}">{% trans 'Commands' %}</a></li>#}
+{#        <li>#}
+{#            <a href="{% url 'terminal:web-terminal' %}" target="_blank">#}
+{#            <span class="nav-label">{% trans 'Web terminal' %}</span>#}
+{#            </a>#}
+{#        </li>#}
+{#        <li id="terminal"><a href="{% url 'terminal:terminal-list' %}">{% trans 'Terminal' %}</a></li>#}
+{#    </ul>#}
+{#</li>#}
+{#<li id="ops">#}
+{#    <a>#}
+{#        <i class="fa fa-coffee" style="width: 14px"></i> <span class="nav-label">{% trans 'Job Center' %}</span><span class="fa arrow"></span>#}
+{#    </a>#}
+{#    <ul class="nav nav-second-level">#}
+{#        <li id="task"><a href="{% url 'ops:task-list' %}">{% trans 'Task list' %}</a></li>#}
+{#    </ul>#}
+{#</li>#}
+{#<li id="audits">#}
+{#    <a>#}
+{#        <i class="fa fa-history" style="width: 14px"></i> <span class="nav-label">{% trans 'Audits' %}</span><span class="fa arrow"></span>#}
+{#    </a>#}
+{#    <ul class="nav nav-second-level">#}
+{#        <li id="ftp-log"><a href="{% url 'audits:ftp-log-list' %}">{% trans 'FTP log' %}</a></li>#}
+{#    </ul>#}
+{#</li>#}
 {#<li id="">#}
 {#    <a href="#">#}
 {#        <i class="fa fa-download"></i> <span class="nav-label">{% trans 'File' %}</span><span class="fa arrow"></span>#}
@@ -77,7 +77,7 @@
 {#    </ul>#}
 {#</li>#}
 <li id="settings">
-    <a href="{% url 'settings:basic-setting' %}">
+    <a href="{% url 'common:basic-setting' %}">
         <i class="fa fa-gears"></i> <span class="nav-label">{% trans 'Settings' %}</span><span class="label label-info pull-right"></span>
     </a>
 </li>
