--- a/apps/users/templates/users/user_profile_update.html
+++ b/apps/users/templates/users/user_profile_update.html
@@ -34,13 +34,13 @@
                     <div class="panel-options">
                         <ul class="nav nav-tabs">
                             <li class="active">
-                                <a href="{% url 'users:user-profile-update' %}" class="text-center">{% trans 'Profile' %} </a>
+                                <a href="{% url 'users:user-profile-password-update' %}" class="text-center">{% trans 'Profile' %} </a>
                             </li>
                             <li>
-                                <a href="{% url 'users:user-password-update' %}" class="text-center">{% trans 'Password' %} </a>
+                                <a href="{% url 'users:user-profile-password-update' %}" class="text-center">{% trans 'Password' %} </a>
                             </li>
                             <li>
-                                <a href="{% url 'users:user-pubkey-update' %}" class="text-center">{% trans 'Public key' %} </a>
+                                <a href="{% url 'users:user-profile-pubkey-update' %}" class="text-center">{% trans 'Public key' %} </a>
                             </li>
                         </ul>
                     </div>
