--- a/apps/users/templates/users/user_pubkey_update.html
+++ b/apps/users/templates/users/user_pubkey_update.html
@@ -37,10 +37,10 @@
                                 <a href="{% url 'users:user-profile-update' %}" class="text-center">{% trans 'Profile' %} </a>
                             </li>
                             <li>
-                                <a href="{% url 'users:user-password-update' %}" class="text-center">{% trans 'Password' %} </a>
+                                <a href="{% url 'users:user-profile-password-update' %}" class="text-center">{% trans 'Password' %} </a>
                             </li>
                             <li class="active">
-                                <a href="{% url 'users:user-pubkey-update' %}" class="text-center">{% trans 'Public key' %} </a>
+                                <a href="{% url 'users:user-profile-pubkey-update' %}" class="text-center">{% trans 'Public key' %} </a>
                             </li>
                         </ul>
                     </div>
@@ -67,7 +67,7 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-2 col-lg-2" style="padding-top: 0">{% trans 'Or reset by server' %}</label>
                                         <div class=" col-sm-9 col-lg-9 ">
-                                            <a id="reset_pubkey" href="{% url 'users:user-pubkey-generate' %}">{% trans 'Reset' %}</a>
+                                            <a id="reset_pubkey" href="{% url 'users:user-profile-pubkey-generate' %}">{% trans 'Reset' %}</a>
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
